[gd_scene load_steps=7 format=3 uid="uid://cjrntg5ql7pse"]

[ext_resource type="Texture2D" uid="uid://da5po8k6ud1qc" path="res://Goth_VectorTest5.png" id="1_7rv1g"]
[ext_resource type="Theme" uid="uid://dsl2fiy1yknb4" path="res://Sprites/UI/lobby_button.tres" id="1_k8brd"]
[ext_resource type="Script" path="res://UI/character_select_button.gd" id="1_yax61"]
[ext_resource type="ButtonGroup" uid="uid://ckenusmng5lym" path="res://UI/character_select_button_group.tres" id="2_wqy67"]
[ext_resource type="Texture2D" uid="uid://cgnd6mtl0h63j" path="res://Sprites/UI/CharacterContainer.png" id="3_qk7ko"]
[ext_resource type="Texture2D" uid="uid://bxjefxwb1obxl" path="res://Sprites/UI/CharacterContainer_Border.png" id="5_huv6i"]

[node name="CharacterSelectButton" type="Button"]
custom_minimum_size = Vector2(192, 192)
offset_right = 192.0
offset_bottom = 192.0
size_flags_horizontal = 3
theme = ExtResource("1_k8brd")
toggle_mode = true
button_group = ExtResource("2_wqy67")
script = ExtResource("1_yax61")
unselected_border_color = Color(0.964706, 0.580392, 0.482353, 1)
selected_border_color = Color(1, 0.811765, 0.439216, 1)
unselected_color = Color(1, 0.964706, 0.815686, 1)
selected_color = Color(1, 0.443137, 0.443137, 1)

[node name="CharacterContainer" type="TextureRect" parent="."]
clip_children = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(96, 96)
texture = ExtResource("3_qk7ko")

[node name="Image" type="TextureRect" parent="CharacterContainer"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_right = 96.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7rv1g")
expand_mode = 3

[node name="Border" type="TextureRect" parent="CharacterContainer"]
layout_mode = 0
offset_left = 4.0
offset_right = 196.0
offset_bottom = 192.0
texture = ExtResource("5_huv6i")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
